--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <header class="page-header">
 	<div class="container">
       <i>Контакты для связи со мной</i><br>
-	  <ins>valdis97971@inbox.ru</ins><br>
-	  <ins>+7-977-193-24-63</ins>
+	  <a class="header-email" href="valdis97971@inbox.ru">
+	  <ins>valdis97971@inbox.ru</ins></a><br>
+	  <a class="header-phone" href="+79771932463"><ins>+7-977-193-24-63</ins></a>
 	  </div>
     </header>
 
@@ -25,6 +26,9 @@
     </section>
 
     <section class="intro">
+	<figure class="project-image">
+	<img src="files/user.jpg" width="928" height="536" alt="Фотография Опознанного Енота">
+	</figure>
 	<div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
       <h3>Пара слов о себе</h3>
@@ -36,18 +40,23 @@
 
     <section class="portfolio">
 	<div class="container">
+	<figure class="project-image" alt="Сайт инструктора Кекса">
       <h2 class="subheading">Мои работы</h2>
-
+	<img src="files/project.jpg" width="928" height="536" alt="Сайт инструктора Кекса">
+	</figure>
       <h3>Сайт инструктора Кекса</h3>
-      <p>Небольшой лендинг о школе для начинающих.</p>
+      <p>Мой первый сайт.</p>
+	  <a class="button" href="source/project/index.html">
+	  Открыть страницу</a>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
 	  </div>
     </section>
-	<div class="container">
     <footer class="page-footer">
-      Контакты в подвале
+	<div class="container">
+	<a class="footer-email" href="valdis97971@inbox.ru"> valdis97971@inbox.ru</a>
+      <a class="footer-phone" href="+79771932463"> +79771932463</a>
     </footer>
 	</div>
   </body>
